--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <h2>On Tap:</h2>
   <h6>{{month}}/{{day}}/{{year}}</h6>
   <br>
-
+<!--
   <ol>
     <li *ngFor="let currentKeg of kegs">
       <ul>
@@ -24,7 +24,7 @@
       </ul>
       <br>
     </li>
-  </ol>
+  </ol> -->
 
   <div *ngIf="selectedKeg">
     <label>Edit Keg:</label>
@@ -42,3 +42,50 @@
       <br>
     <button (click)="finishedEditing()">Done</button>
   </div>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Brewery</th>
+      <th scope="col">Type</th>
+      <th scope="col">Price</th>
+      <th scope="col">Alc %</th>
+      <th scope="col">Pints Left</th>
+      <th scope="col">Admin</th>
+    </tr>
+  </thead>
+    <tbody *ngFor="let currentKeg of kegs" [class]="kegLevelWarning(currentKeg)">
+      <th scope ="row">{{currentKeg.name}}</th>
+      <td>{{currentKeg.brand}}</td>
+      <td>{{currentKeg.type}}</td>
+      <td [class]="priceIndex(currentKeg)">${{currentKeg.price}}.00 pt.</td>
+      <td [class]="alcoholIndex(currentKeg)">{{currentKeg.alcoholContent}}%</td>
+      <td>{{currentKeg.pints}}</td>
+      <td>
+        <button (click)="pourBeer(currentKeg)">Pour</button>
+        <button (click)="editKeg(currentKeg)">Edit</button>
+        <button (click)="replaceKeg(currentKeg)">Replace Keg</button>
+
+      </td>
+    </tbody>
+</table>
+
+<div *ngIf="selectedKeg">
+  <td>
+  <label>Edit Keg:</label>
+    <br>
+    <input [(ngModel)]="selectedKeg.name">
+    <br>
+    <input [(ngModel)]="selectedKeg.brand">
+    <br>
+    <input [(ngModel)]="selectedKeg.type">
+    <br>
+    <input [(ngModel)]="selectedKeg.price">
+    <br>
+    <input [(ngModel)]="selectedKeg.alcoholContent">
+    <input [(ngModel)]="selectedKeg.pints">
+    <br>
+  <button (click)="finishedEditing()">Done</button>
+  </td>
+</div>
