--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     </thead>
       <tbody *ngFor="let currentKeg of kegs" [class]="kegLevelWarning(currentKeg)">
         <th scope ="row">{{currentKeg.name}}</th>
-        <td>{{currentKeg.brand}}</td>
+        <td>{{currentKeg.brewery}}</td>
         <td>{{currentKeg.type}}</td>
         <td [class]="priceIndex(currentKeg)">${{currentKeg.price}}.00 pt.</td>
         <td [class]="alcoholIndex(currentKeg)">{{currentKeg.alcoholContent}}%</td>
@@ -45,7 +45,7 @@
       <input [(ngModel)]="newKeg.name" placeholder="eg. Spacedust">
       <br>
       <label>Brewery: </label>
-      <input [(ngModel)]="newKeg.brand" placeholder="eg. Elysian">
+      <input [(ngModel)]="newKeg.brewery" placeholder="eg. Elysian">
       <br>
       <label>Type: </label>
       <input [(ngModel)]="newKeg.type" placeholder="eg. IPA">
@@ -68,7 +68,7 @@
       <br>
       <input [(ngModel)]="selectedKeg.name">
       <br>
-      <input [(ngModel)]="selectedKeg.brand">
+      <input [(ngModel)]="selectedKeg.brewery">
       <br>
       <input [(ngModel)]="selectedKeg.type">
       <br>
